docs: add create user doc
